0.9 - ?
- Fixed toolbar search suggestions working just once (Thanks to Salvatore Benedetto)
- Fixed time formatting bug with videos longer than 1 hour (Thanks to Rene Bogusch)
- Norwegian translation by Jan W. Skjoldal

0.8.1 - November 20, 2009
- Fix showstopper bug: Normal quality videos won't play when HD mode is enabled
- Turkish translation by Ali E. İmrek

0.8 - November 16, 2009
- HD video support
- Volume level and mute is restored accross sessions
- No icons in menus on Linux (GNOME 2.28 style)
- Select search box text on Ctrl+F
- Handle HTTP_PROXY variable with trailing slash (Fix by Eduardo Suarez-Santana)
- Croatian translation by Srecko Belaic
- Latvian translation by Inga Muste
- Galician and Neutral Spanish translations by Miguel Anxo Bouzada
- Hungarian translation by Krisztián Horváth
- French translation by Guillaume Betous

0.7 - October 12, 2009
- Fixed "embedding disabled by request" message. All videos now play.
- Slightly faster playlist painting
- Fixed overflowing text in the playlist
- Fixed view crossfades on the Mac
- Fixed FreeDesktop icons on Linux

0.6.1 - September 15, 2009
- Fixed showstopper bug caused by a change in the YouTube web service
  Thanks to Guillaume Girard for reporting it

0.6 - September 7, 2009
- New search view look
- Hide idle mouse cursor when above the video (Linux only)
- Volume keyboard shortcuts
- Keyboard shortcuts appear in the status bar
- Better error reporting
- Playlist width is saved accross restarts
- HTTP proxy support contributed by Kiwamu Okabe
- Fixed Space key not pausing videos in fullscreen mode (Mac only)
- Fixed window losing focus after exiting fullscreen (Mac only)
- Spanish translation by Rafa
- Japanese translation by Kiwamu Okabe
- Czech translation by Dan Vrátil
- Hebrew translation by Yaron Shahrabani

0.5 - July 31, 2009
- Search autocomplete
- Skip to the next when a video cannot be loaded
- Playlist items can now be dropped onto the video area