@@ -30,13 +30,6 @@ public slots:
 protected:
     void closeEvent(QCloseEvent *);
 
-    /*
-    struct DownloadResource
-    {
-        QProgressDialog* dialog;
-        QFile* file;
-    };*/
-
 private slots:
     void fadeInWidget(QWidget *oldWidget, QWidget *newWidget);
     void goBack();
@@ -63,17 +56,9 @@ private slots:
     void volumeChanged(qreal newVolume);
     void volumeMutedChanged(bool muted);
 
-    /*
-    // download related stuff
-    void abortDownload();
-    void download();
-    void download(const QUrl& url, const DownloadResource& res);
-    void replyReadyRead();
-    void replyDownloadProgress(qint64 bytesReceived, qint64 bytesTotal);
-    void replyError(QNetworkReply::NetworkError code);
-    void replyFinished();
-    void replyMetaDataChanged();
-    */
+    // fullscreen toolbar
+    void showFullscreenToolbar(bool show);
+    void showFullscreenPlaylist(bool show);
 
 private:
     void initPhonon();
@@ -149,7 +134,6 @@ private:
     bool m_fullscreen;
     bool m_maximized;
 
-    // QMap<QNetworkReply*, DownloadResource> m_downloads;
 };
 
 #endif
