@@ -31,6 +31,7 @@ protected:
     void mousePressEvent(QMouseEvent *event);
     void dragEnterEvent(QDragEnterEvent *event);
     void dropEvent(QDropEvent *event);
+    void mouseMoveEvent(QMouseEvent *event);
 
 private:
     QStackedLayout *stackedLayout;
